--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,10 +1,12 @@
 
 $main-white-color: rgba(255, 255, 255, 1);
-$h-pb-gray-color: rgba(161, 161, 161, 1);
+$h-pb-grey-color: rgba(161, 161, 161, 1);
 $main-blue-color: rgba(73, 133, 255, 1);
 $main-dark-color: rgba(50, 50, 50, 1);
-$main-gray-color: rgba(153, 153, 153, 1);
+$main-grey-color: rgba(153, 153, 153, 1);
 $black-color: rgba(0, 0, 0, 1);
 $light-grey-color: rgba(224, 224, 224, 1);
+$bg-color: rgba(246, 246, 248, 1);
+$sud-input-b-color: rgba(242, 242, 242, 1);
 
 
