--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -1,3 +1,31 @@
-nav{
-    
+.nav{
+    display: flex;
+    &-list{
+        display: flex;
+        gap: 40px;
+        justify-content: center;
+        margin-left: auto;
+        
+        &-item{
+            padding-bottom: 40px;
+            padding-top: 40px;
+        }
+        &-link{
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 20px;
+            color: $main-white-color;
+            position: relative;
+        }
+    }
+}
+.current::after{
+    content: '';
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 58px;
+    height: 2px;
+    border-radius: 2px;
+    background-color: $main-white-color;
 }
