--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,19 @@
 @import "./abstracts/variables";
+@import "./components/container";
 
-@import "";
+@import "./base/reset";
+
+@import "./components/buttons";
+@import "./components/contacts";
+@import "./components/header";
+@import "./components/logo";
+
+@import "./layout/about-us";
+@import "./layout/all-projects";
+@import "./layout/services";
+@import "./layout/footer";
+@import "./layout/hero";
+@import "./layout/navigation";
+@import "./layout/work";
+@import "./layout/subcribe";
+@import "./layout/video";
