--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -8,5 +8,7 @@ $black-color: rgba(0, 0, 0, 1);
 $light-grey-color: rgba(224, 224, 224, 1);
 $bg-color: rgba(246, 246, 248, 1);
 $sud-input-b-color: rgba(242, 242, 242, 1);
-
-
+$menu-nav: rgba(33, 33, 33, 1);
+$main-sec-blue-color: rgba(33, 150, 243, 1);
+$second-text-color: rgba(117, 117, 117, 1);
+$social-item: rgba(33, 33, 33, .2);
