--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,7 @@
 @import "./components/contacts";
 @import "./components/header";
 @import "./components/logo";
+@import "./components/mod-menu";
 
 @import "./layout/about-us";
 @import "./layout/all-projects";
