--- a/scss/layout/_video.scss
+++ b/scss/layout/_video.scss
@@ -1,7 +1,7 @@
 .video{
     padding-top: 70px;
     padding-bottom: 85px;
-    background-image: url("/img/video-bg-img.png");
+    background-image: url("../img/video-bg-img.png");
     background-repeat: no-repeat;
     &-title{
         font-size: 36px;
@@ -20,7 +20,7 @@
         margin-bottom: 70px;
     }
     &-div{
-        background-image: url("../../img/video-bg-btn-img.png");
+        background-image: url("../img/video-bg-btn-img.png");
         width: 970px;
         height: 430px;
         border-radius: 10px;
