--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -1,5 +1,9 @@
 .nav{
     display: flex;
+
+    // @media screen and (max-width: 767px) {
+    //     padding: 118px 0;
+    // }
     &-list{
         display: flex;
         gap: 40px;
