--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -1,7 +1,7 @@
 .hero{
     padding-top: 219px;
     padding-bottom: 335px;
-    background-image: url("../../img/hero-bg.jpg");
+    background-image: url("../img/hero-bg.jpg");
     &-text{
         font-size: 16px;
         font-weight: 500;
